// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout matches snapshot: enzyme.mount 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 10px;
  min-width: 320px;
  box-sizing: border-box;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-direction: column;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
  }
}

<Layout>
  <glamorous(div)>
    <div
      className="glamor-0"
    >
      example
    </div>
  </glamorous(div)>
</Layout>
`;

exports[`Layout matches snapshot: enzyme.render 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 10px;
  min-width: 320px;
  box-sizing: border-box;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-direction: column;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
  }
}

<div
  class="glamor-0"
>
  example
</div>
`;

exports[`Layout matches snapshot: enzyme.shallow 1`] = `
<glamorous(div)>
  example
</glamorous(div)>
`;
